change main activity to time tracker activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".TimeTrackerActivity"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
 
